fix: see loist of reservations made by user